starting game logic; helper functions to get indentity of slot

--- a/ChineseCheckers.vcxproj
+++ b/ChineseCheckers.vcxproj
@@ -26,6 +26,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\checkers.cpp" />
+    <ClCompile Include="src\drawers.cpp" />
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\helpers.cpp" />
     <ClCompile Include="src\pch.cpp">
