Game logic mostly done. Move checkers implementation to multiple files

--- a/ChineseCheckers.vcxproj.filters
+++ b/ChineseCheckers.vcxproj.filters
@@ -29,10 +29,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\checkers.cpp">
+    <ClCompile Include="src\gameLogic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\game.cpp">
+    <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\helpers.cpp">
@@ -45,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\drawers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\extra.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
