--- a/ChineseCheckers.vcxproj
+++ b/ChineseCheckers.vcxproj
@@ -25,15 +25,16 @@
     <ClInclude Include="src\slot.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\checkers.cpp" />
+    <ClCompile Include="src\gameLogic.cpp" />
     <ClCompile Include="src\drawers.cpp" />
-    <ClCompile Include="src\game.cpp" />
+    <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\helpers.cpp" />
     <ClCompile Include="src\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\slot.cpp" />
+    <ClCompile Include="src\extra.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="res\todo.txt" />
